# any-llm

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  conftest.py  index.html  index.md  index.txt  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  provider_list.md  providers.md  pull_request_template.md  pyproject.toml  sitemap-0.xml
.github/: copilot-instructions.md  pull_request_template.md
acceptance-tests/: README.md  SCENARIOS.md  database.py  models.py  responses.py  scenarios.py  server.py  validators.py
acceptance-tests-server/: database.py  example_any_llm_client.py  example_client.py  models.py  responses.py  results.db  scenarios.py  server.py  validators.py
alembic/: env.py
any-llm/: llms-full.txt
any-llm-sdk-stub/: .gitignore  PUBLISHING.md  QUICK_PUBLISH.sh  README.md  WHY_THIS_WORKS.md  pyproject.toml  ruff.toml
any-llm-sdk-stub/src/any_llm/: __init__.py
api/: any-llm.md  completion.md  completion.txt  embedding.md  exceptions.md  messages.md  responses.md
blueprint/: README.md  acceptance-tests.md  integration-tests.md  prompts.md
cookbooks/: any-llm-getting-started.md
docker/: Dockerfile  config.example.yaml  config.example.yml  docker-compose.override.yml  docker-compose.yml  docker-entrypoint.sh
docs/: .gitignore  astro.config.mjs  index.md  installation.md  llms-full.txt  llms.txt  package-lock.json  package.json  providers.md  quickstart.md  rerank.md  usage-event-batching.md
examples/: httpx_client_example.py
go/: acceptance_test.go  anyllm.go  errors.go  (+10 more)
rs/: Cargo.toml  clarifications.md  lint.sh  test.sh
rs/src/: errors.rs  lib.rs  types.rs
rs/src/providers/: mod.rs  openai.rs
rs/tests/: acceptance_test.rs
(+608 files in other folders)
