[package]
name = "any-llm-rs"
version = "0.0.0-dev"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "A unified interface for interacting with multiple LLM providers"
readme = "README.md"
repository = "https://github.com/mozilla-ai/any-llm"
keywords = ["llm", "ai", "openai", "anthropic", "chat"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async streams
futures = "0.3"
async-stream = "0.3"

# Error handling
thiserror = "2"

[dev-dependencies]
# Testing
tokio-test = "0.4"

[features]
default = []

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
